--- a/package.json
+++ b/package.json
@@ -21,8 +21,6 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
     "@types/react": "^18.2.64",
     "@types/react-dom": "^18.2.21",
     "@vitejs/plugin-react": "^4.2.1",
@@ -31,10 +29,15 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
     "glob": "^10.3.10",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "vite": "^5.1.6",
     "vite-plugin-lib-inject-css": "^2.0.0"
   },
   "sideEffects": [
     "**/*.css"
-  ]
+  ],
+  "dependencies": {
+    "@react-spring/three": "^9.7.3"
+  }
 }
